# closing-frenet-serret

./: DOCUMENTATION.md  Makefile  README.md  cfs_helpers.py  close-curve.py  make  test_jacobian.py
plots/: benchmark_optimization.py  loss_landscape.py  plot_curve.py
source/: CMakeLists.txt  argparse.cpp  argparse.hpp  curve_helpers.cpp  io_utils.cpp  io_utils.hpp  main.cpp  optimization.cpp  optimization.hpp  python_module.cpp  solver.cpp  solver.hpp  system_class.cpp  system_class.hpp
tests/: test_jacobian.py  test_jacobian_components.py
